--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Marco Apolonio",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "mongoose": "^6.3.4",
     "mongoose-timestamp": "^0.6.0",
     "restify": "^8.6.1",
