--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "Marco Apolonio",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "mongoose-timestamp": "^0.6.0",
     "restify": "^8.6.1",
-    "restify-errors": "^8.0.2"
+    "restify-errors": "^8.0.2",
+    "restify-jwt-community": "^1.1.26"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
